; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee802154/extr_fakehard.c_fake_start_req.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee802154/extr_fakehard.c_fake_start_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ieee802154_addr = type { i32 }
%struct.wpan_phy = type { i32, i8*, i8* }

@IEEE802154_INVALID_PARAMETER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.ieee802154_addr*, i8*, i8*, i8*, i8*, i8*, i8*, i8*)* @fake_start_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fake_start_req(%struct.net_device* %0, %struct.ieee802154_addr* %1, i8* %2, i8* %3, i8* %4, i8* %5, i8* %6, i8* %7, i8* %8) #0 {
  %10 = alloca %struct.net_device*, align 8
  %11 = alloca %struct.ieee802154_addr*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i8*, align 8
  %19 = alloca %struct.wpan_phy*, align 8
  store %struct.net_device* %0, %struct.net_device** %10, align 8
  store %struct.ieee802154_addr* %1, %struct.ieee802154_addr** %11, align 8
  store i8* %2, i8** %12, align 8
  store i8* %3, i8** %13, align 8
  store i8* %4, i8** %14, align 8
  store i8* %5, i8** %15, align 8
  store i8* %6, i8** %16, align 8
  store i8* %7, i8** %17, align 8
  store i8* %8, i8** %18, align 8
  %20 = load %struct.net_device*, %struct.net_device** %10, align 8
  %21 = call %struct.wpan_phy* @net_to_phy(%struct.net_device* %20)
  store %struct.wpan_phy* %21, %struct.wpan_phy** %19, align 8
  %22 = load %struct.wpan_phy*, %struct.wpan_phy** %19, align 8
  %23 = getelementptr inbounds %struct.wpan_phy, %struct.wpan_phy* %22, i32 0, i32 0
  %24 = call i32 @mutex_lock(i32* %23)
  %25 = load i8*, i8** %12, align 8
  %26 = load %struct.wpan_phy*, %struct.wpan_phy** %19, align 8
  %27 = getelementptr inbounds %struct.wpan_phy, %struct.wpan_phy* %26, i32 0, i32 2
  store i8* %25, i8** %27, align 8
  %28 = load i8*, i8** %13, align 8
  %29 = load %struct.wpan_phy*, %struct.wpan_phy** %19, align 8
  %30 = getelementptr inbounds %struct.wpan_phy, %struct.wpan_phy* %29, i32 0, i32 1
  store i8* %28, i8** %30, align 8
  %31 = load %struct.wpan_phy*, %struct.wpan_phy** %19, align 8
  %32 = getelementptr inbounds %struct.wpan_phy, %struct.wpan_phy* %31, i32 0, i32 0
  %33 = call i32 @mutex_unlock(i32* %32)
  %34 = load %struct.net_device*, %struct.net_device** %10, align 8
  %35 = load i32, i32* @IEEE802154_INVALID_PARAMETER, align 4
  %36 = call i32 @ieee802154_nl_start_confirm(%struct.net_device* %34, i32 %35)
  ret i32 0
}

declare dso_local %struct.wpan_phy* @net_to_phy(%struct.net_device*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @ieee802154_nl_start_confirm(%struct.net_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
